# de-thai-people-exercise

./: README.md  docker-compose.yaml  pyproject.toml
airflow/: requirements.txt
airflow/.astro/: test_dag_integrity_default.py
airflow/dags/: thai_people_exercise.py  word_count.py
minio/.minio.sys/: format.json
pyspark/: config.json  main.py
pyspark/src/jobs/wordcount/: wordcount.py
pyspark/src/shared/: context.py
spark/: Dockerfile
